apps/base/cadence-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadence-site
  labels:
    http-ingress: "true"
