apps/base/cadence-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadence-site
  namespace: cadence-site
  labels:
    app: cadence-site
spec:
  type: ClusterIP
  selector:
    app: cadence-site
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
